# comm_channel_bench

./: CMakeLists.txt  benchmark.sh  params.json
src/: client.c  common.c  main.c  params.c  server.c
src/include/: client.h  common.h  params.h  server.h
